# alloy

./: .env.example  .gitignore  .mcp.json  Alloy-aarch64.app.tar.gz.sig  Alloy-x86_64.app.tar.gz.sig  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEV.md  LAUNCH.md  LICENSE  README.md  SEARCH.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json  playwright.config.ts  run.sh  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
alloy-server/: Cargo.toml  README.md
alloy-server/src/: auth.rs  cli.rs  compaction.rs  config.rs  embed.rs  error.rs  lib.rs  local.rs  main.rs  notify.rs  skill_registry.rs  streaming.rs  tool_loop.rs  types.rs  vault.rs  vault_writer.rs
alloy-server/src/providers/: cli_claude.rs  mod.rs  openai_compatible.rs
alloy-server/src/routes/: fs.rs  mcp.rs  mod.rs  models.rs  path.rs  proxy.rs  static_files.rs  stream.rs  tasks.rs  triggers.rs  watch.rs
alloy-server/src/tasks/: executor.rs  mod.rs  model.rs  scheduler.rs
alloy-server/src/tools/: files.rs  http.rs  mod.rs  private.rs  search.rs  skills.rs  subagents.rs  tasks.rs  triggers.rs  websearch.rs
alloy-server/src/triggers/: executor.rs  logs.rs  mod.rs  model.rs  scheduler.rs
docs/: design-decisions.md
mcp-server/: playwright-server.ts
public/: manifest.json
scripts/: backlog-runner.sh  bump-version.sh  dev-server.sh  dev.sh  generate-icons.js  migrate-model-format.cjs  tauri-with-logs.sh
server/: index.ts  pricing.ts  providers.ts  streaming.ts  vault-writer.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
(+254 files in other folders)
