[package]
name = "alloy-server"
version = "0.1.0"
edition = "2021"
description = "Rust server backend for Alloy (Phase 1: standalone CLI)"
publish = false

[[bin]]
name = "alloy-serve"
path = "src/main.rs"

[lib]
name = "alloy_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
# Decode/resize uploaded images at write time (see routes::fs). Only the formats
# we handle are enabled, to keep the build and binary lean.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
cron = "0.15"
iana-time-zone = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
rust-embed = { version = "8", features = ["mime-guess"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
